# claude-insights

./: .gitignore  CHANGELOG.md  README.md  insight.py  install.sh  main.py  pyproject.toml  report.html  requirements.txt
.claude/skills/ai-fluency/: SKILL.md
.claude/workflows/: ai-fluency.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: tests.yml
claude_insight/: __init__.py  __main__.py  cli.py
claude_insight/analyzer/: __init__.py  metrics.py
claude_insight/parser/: __init__.py  transcript.py
claude_insight/reports/: __init__.py  html_report.py  terminal.py
docs/: index.html
tests/: generate_test_data.py  test_insight.py  test_skill.py
tests/data/: architect_session.jsonl  debugger_session.jsonl
thoughts/arodriguez/plans/: 2026-06-21-ai-fluency-report-redesign.md
