[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-insight"
version = "0.1.0"
description = "Private, local AI builder profiler for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Feloguarin" }]
keywords = ["claude", "claude-code", "analytics", "cli", "privacy"]
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
]
# Pure standard library — no runtime dependencies.
dependencies = []

[project.urls]
Homepage = "https://github.com/Feloguarin/claude-insight"
Repository = "https://github.com/Feloguarin/claude-insight"

[project.scripts]
claude-insight = "claude_insight.cli:main"

[tool.setuptools]
packages = [
    "claude_insight",
    "claude_insight.parser",
    "claude_insight.analyzer",
    "claude_insight.reports",
]
