[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-insight"
version = "0.1.0"
description = "Private, local AI builder profiler for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Felipe", email = "onigiri@openclaw.ai" }]
keywords = ["claude", "claude-code", "analytics", "cli", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
]
# Pure standard library — no runtime dependencies (Ollama, when used for AI
# analysis, is talked to over HTTP via urllib).
dependencies = []

[project.urls]
Homepage = "https://github.com/Feloguarin/claude-insight"
Repository = "https://github.com/Feloguarin/claude-insight"

[project.scripts]
claude-insight = "claude_insight.cli:main"

[tool.setuptools]
packages = [
    "claude_insight",
    "claude_insight.parser",
    "claude_insight.analyzer",
    "claude_insight.reports",
]
